# codekit

./: .gitignore  License.md  Package.swift  README.md  android_bindings.sh  build_bindings.sh  build_js.sh  build_ndk.sh  ios_bindings.sh  ios_crate_framework.sh  ios_create_xcframework.sh
bindings/CodeKit/CodeKit/: CodeKit.h  RCKCodeDescriptor+Private.h  RCKCodeDescriptor.h  RCKCodeDescriptor.m  RCKCodeGenerator.h  RCKCodeGenerator.m  RCKCodeKit.h  RCKCodeKit.m  RCKEAN8CodeGenerator.m
bindings/CodeKit/CodeKit.xcodeproj/: project.pbxproj
bindings/CodeKit/CodeKit/CodeKit.docc/: CodeKit.md  GettingStarted.md
bindings/CodeKit/CodeKit/Filters/: RCKCodabarCodeGenerator.h  RCKCodabarCodeGenerator.m  RCKCode39CodeGenerator.h  RCKCode39CodeGenerator.m  RCKCode93CodeGenerator.h  RCKCode93CodeGenerator.m  RCKCodeGenerator.h  RCKCodeGenerator.m  RCKEAN13CodeGenerator.h  RCKEAN13CodeGenerator.m  RCKEAN8CodeGenerator.h  RCKEAN8CodeGenerator.m  RCKI2of5CodeGenerator.h  RCKI2of5CodeGenerator.m
bindings/CodeKit/CodeKitTests/: CodeKitTests.m
bindings/CodeKit/TestiOSObjc/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
bindings/CodeKit/TestiOSObjc/Base.lproj/: Main.storyboard
bindings/CodeKitAndroid/: settings.gradle
bindings/CodeKitAndroid/app/: build.gradle  settings.gradle
bindings/CodeKitAndroid/app/app/: build.gradle
bindings/CodeKitAndroid/app/codekit/: build.gradle  github.properties
bindings/CodeKitAndroid/gradle/wrapper/: gradle-wrapper.properties
bindings/MyApplication/app/: build.gradle
bindings/TestBitmap/: settings.gradle
bindings/TestBitmap/app/: build.gradle
bindings/codekit-js/: codekit.d.ts  codekit.js  codekit_bg.wasm  codekit_bg.wasm.d.ts  index.html  package.json
bindings/libcodekit_core/include/: CodeKit-Core.h
codekit-core/: Cargo.toml  CodeKit.h  cbindgen.toml
codekit-core/.cargo/: config.toml
codekit-core/src/: codabar.rs  code39.rs  code93.rs  commons.rs  ean.rs  ffi.rs  i2of5.rs  jvm.rs  lib.rs  wasm.rs
(+53 files in other folders)
