[package]
name = "codekit-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
ffi-interface = []
jni-interface = ['ffi-interface', 'jni']
android = ['android_logger', 'jni-interface']

[dependencies]
lazy_static = "1.4.0"
libc = { version = "0.2", optional = true }
jni = { version = "0.19.0", optional = true }
log = "0.4.17"
android_logger = { version = "0.9", optional = true }
anyhow = "1.0.69"
paste = { version = "1.0.11", optional = true }
[build-dependencies]
cbindgen = { version = "0.24.3", optional = true }
