[package]
name = "codekit-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
ffi-interface = []
jni-interface = ['ffi-interface', 'jni',  'paste', 'anyhow']
wasm-interface = ['wasm-bindgen']

[dependencies]
lazy_static = "1.4.0"
libc = { version = "0.2", optional = true }
jni = { version = "0.21.0", optional = true }
anyhow = { version ="1.0.69", optional = true }
paste = { version = "1.0.11", optional = true }
wasm-bindgen = { version = "0.2.74", optional = true}
[build-dependencies]
cbindgen = { version = "0.24.3", optional = true }
